subfigures problem is solved

--- a/preamble.tex
+++ b/preamble.tex
@@ -15,7 +15,8 @@
 \usepackage{mathtools}
 \usepackage{braket}
 \usepackage{multirow}
-
+\usepackage{caption}
+\usepackage{subcaption}
 
 % Custom environment
 \newtheorem{problem}{Problem}
