--- a/main.tex
+++ b/main.tex
@@ -14,7 +14,7 @@
 %\author{Mehrdad, Kaushik, Mahmoud, Rupak, Sadegh}
 
 \makeatletter
-\@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
+% \@ifclassloaded{acmart}{\keywords{Abstraction Based Controller Design, Tracking Control}}{}
 \makeatother
 
 \sloppy
