--- a/related_work.tex
+++ b/related_work.tex
@@ -1,5 +1,6 @@
-\subsection{Related Work}
-
+\smallskip
+\noindent\textbf{Related Work}
+%
 We categorize the related work into (1) the ones which propose hierarchical controller synthesis techniques, (2) the ones which address the problem of multi-agent controller synthesis, and (3) the ones which combine (1) and (2) like us.
 
 Recently, using hierarchical approach, that is combination of high-level planning and low-level tracking has gained especial attention. The existing methods can be categorized based on the dynamics that they can handle (e.g. nonlinear, perturbed, etc.), considered class of specifications and their scalability. A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and use
